# hiremeAI

./: README.md  hireme.db  pyproject.toml
docs/: architecture.md  portal_strategies.md  profile_schema.md
envoy/: __init__.py  config.py  graph.py  scheduler.py  tracker.py
envoy/nodes/: __init__.py  applicator.py  discovery.py  filter.py  generation.py  renderer.py
envoy/profile/: loader.py  retriever.py
hiremeAI/: __init__.py  config.py  graph.py  scheduler.py  tracker.py
hiremeAI/nodes/: __init__.py  applicator.py  discovery.py  filter.py  generation.py  renderer.py
hiremeAI/profile/: __init__.py  loader.py  retriever.py
profile/data/: certifications.md  experience.md  preferences.md  projects.md  skills.md  writing_samples.md
templates/: resume.html
tests/: __init__.py  test_applicator.py  test_config.py  test_filter.py  test_generation.py  test_hireme.py  test_profile_loader.py  test_tracker.py
